user1/day3/dbapp/db-backend-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db-backend
  labels:
    day: three
    sample: dbapp
spec:
  type: ClusterIP
  selector:
    day: three
    sample: dbapp
    layer: backend
  ports:
    - name: postgres
      port: 5432
