user1/day3/dbapp/db-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db-frontend
  labels:
    day: three
    sample: dbapp
spec:
  type: NodePort
  selector:
    day: three
    sample: dbapp
    layer: frontend
  ports:
    - name: adminer
      port: 8080
      nodePort: 30010      
  sessionAffinity: ClientIP
